# simulator

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.iron  Dockerfile.sauvc  Dockerfile.teknofest  LICENSE  README.md  Simulation.launch  UV_spawn.launch  check_xauth.sh  d  db  entrypoint.sh  make_and_run.sh  ros_entrypoint.sh  run_docker_gui.sh  run_sauvc.sh  sim  start_simulation.bash  tese.config
Exam/: BG.qrc  Makefile  moc_predefs.h  moc_widget.cpp  moc_widget3d.cpp  ui_widget.h  ui_widget3d.h  untitled2.pro  widget.cpp  widget.h  widget.ui  widget3d.cpp  widget3d.h  widget3d.ui
docker/: Dockerfile  b  ros_entrypoint.sh
docs/: architecture.md
entrypoint/: sauvc.sh  teknofest.sh
host_bridge/: marker_receiver.py  synced_receiver.py  ws_bridge.py
py_pub/: package.xml  setup.cfg  setup.py
sauvc/: docker-compose.yml  sauvc.launch
scripts/: randomize_sauvc.py  randomize_teknofest.py
simulator_description/: CMakeLists.txt  README.md  package.xml
simulator_description/models/car/: model.sdf
simulator_description/models/diff_drive/: model.config
simulator_gazebo_plugins/: CMakeLists.txt  README.md  package.xml
simulator_gazebo_plugins/include/simulator_gazebo_plugins/: BasicSystem.hh  FullSystem.hh
simulator_gazebo_plugins/src/: BasicSystem.cc  FullSystem.cc
simulator_launch/: CMakeLists.txt  README.md  package.xml
simulator_launch/config/: simulator_bridge.yaml
simulator_launch/launch/: aruco_world.launch.py  diff_drive.launch.py  mission_sauvc.launch.py  rrbot_setup.launch.py  sim.launch.py  world_man.launch.py
simulator_perception/: README.md  package.xml  setup.cfg  setup.py
simulator_perception/resource/: bbox_attrs.yaml  simulator_perception
simulator_perception/simulator_perception/: converter.py  manual_thruster_bridge_node.py  simulator_perception_node.py
simulator_perception/simulator_perception/utils/: DistanceCalculator.py  __init__.py
simulator_simulation/: CMakeLists.txt  README.md  package.xml
simulator_simulation/worlds/: SAUVC_WORLD.sdf  building_robot.sdf  man.sdf
simulator_simulation/worlds/Nulina/: CMakeLists.txt  model.sdf  package.xml
simulator_simulation/worlds/Nulina/config/: joint_names_Nulina.yaml
simulator_simulation/worlds/Nulina/launch/: display.launch  gazebo.launch
simulator_simulation/worlds/Nulina/meshes/: VMA1.STL  VMA1.dae  VMA2.STL  VMA2.dae  VMA3.STL  VMA3.dae  VMA4.STL  VMA4.dae  VMA5.STL  VMA5.dae  VMA6.STL  VMA6.dae  base_link.dae
simulator_simulation/worlds/Nulina/urdf/: Nulina.csv  Nulina.urdf  model.urdf
simulator_simulation/worlds/aruco_marker/: model.config  model.sdf
simulator_simulation/worlds/blue_flare/: model.config
simulator_simulation/worlds/bowl_blue/: model.config
simulator_simulation/worlds/bowl_red/: model.config
simulator_simulation/worlds/buckets/: model.sdf
simulator_simulation/worlds/buckets/meshes/: Bucket_1_Link.STL
simulator_simulation/worlds/copter/: model.config  model.sdf
simulator_simulation/worlds/main_gate/: model.sdf
simulator_simulation/worlds/man/: model.config  model.sdf
simulator_simulation/worlds/pool/: model.sdf
simulator_simulation/worlds/pool/meshes/: Bottom_link.STL  pool_final.DAE  pool_textured.dae
simulator_simulation/worlds/qualification_gate/: model.config  model.sdf
simulator_simulation/worlds/red_flare/: model.sdf
simulator_simulation/worlds/starting_gates/meshes/: base_link.STL
simulator_simulation/worlds/x3/: model.sdf
simulator_simulation/worlds/x3/meshes/: ardrone.dae  firefly.dae  hummingbird.dae  iris.dae  neo11.dae  neo11_propeller_ccw.dae  neo11_propeller_cw.dae  neo9.dae  neo9_propeller_ccw.dae  neo9_propeller_cw.dae  pelican.dae  propeller_cw.dae  vi_camera.dae  vi_sensor.dae  x3.dae
simulator_simulation/worlds/yellow_flare/: model.sdf
src/gazebo_plugins/: CMakeLists.txt  package.xml
src/gazebo_plugins/include/gazebo_plugins/: buoyancy.hh  model_move.h
src/gazebo_plugins/launch/: main.launch
src/gazebo_plugins/src/: buoyancy.cc  hydrodynamicModel.cc  model_move.cc  model_push.cc  underwaterObjectPlugin.cc
src/gazebo_plugins/worlds/: model_push.world
src/pool/: CMakeLists.txt  package.xml
src/pool/launch/: display.launch  gazebo.launch
src/pool/urdf/: pool.gazebo  pool.urdf  pool.xacro
src/spawn_sdf/: CMakeLists.txt  package.xml
src/spawn_sdf/models/buckets/: model.sdf
src/spawn_sdf/models/buckets/meshes/: Bucket_2_Link.STL
src/spawn_sdf/models/main_gate/: model.sdf
src/spawn_sdf/models/pillow/: model.config
src/spawn_sdf/models/pinger/: model.sdf
src/spawn_sdf/models/pool/: model.config  model.sdf
src/spawn_sdf/models/pool/meshes/: Base_link.STL
src/spawn_sdf/models/sauvc/buckets/meshes/: Bucket_3_Link.STL  Bucket_4_Link.STL  base_green.STL
src/spawn_sdf/models/sauvc/red_flare/: model.config  model.sdf
src/spawn_sdf/models/sauvc/yellow_flare/: model.config
src/spawn_sdf/models/starting_gates/: model.config  model.sdf
src/spawn_sdf/models/teknofest/big_hoop/: model.config  model.sdf
src/spawn_sdf/models/teknofest/big_hoop/meshes/: big_hoop.STL
src/spawn_sdf/models/teknofest/gate/: model.config  model.sdf
src/spawn_sdf/models/teknofest/gate/meshes/: gate.STL
src/spawn_sdf/models/teknofest/pinger/: model.sdf
src/spawn_sdf/models/teknofest/pinger/meshes/: pinger.STL
src/spawn_sdf/models/teknofest/small_hoop/: model.config  model.sdf
src/spawn_sdf/models/teknofest/small_hoop/meshes/: small_hoop.STL
src/spawn_sdf/models/teknofest/target_circle/: model.config  model.sdf
src/spawn_sdf/models/teknofest/target_circle/meshes/: target_circle.STL
src/spawn_sdf/models/teknofest/target_square/: model.config  model.sdf
src/spawn_sdf/models/teknofest/target_square/meshes/: target_square.STL
src/spawn_sdf/models/teknofest/target_triangle/: model.config  model.sdf
src/spawn_sdf/models/teknofest/target_triangle/meshes/: target_triangle.STL
src/spawn_sdf/models/white_marker/: model.config  model.sdf
src/spawn_sdf/models/yellow_flare/: model.sdf
stingray_interfaces/: CMakeLists.txt  package.xml
teknofest/: docker-compose.yml  run_teknofest.sh  (+1 more)
(+1178 files in other folders)
