<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulator_launch</name>
  <version>0.1.0</version>
  <description>Launch files for simulator stack.</description>
  <maintainer email="team@hydronautics.local">Hydronautics Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros_gz</depend>
  <depend>ros_gz_sim</depend>
  <depend>simulator_description</depend>
  <depend>simulator_simulation</depend>
  <depend>simulator_gazebo_plugins</depend>
  <depend>simulator_perception</depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
