<package>
  <name>pool</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for Swimming_pool_final</p>
    <p>This package contains configuration data, 3D models and launch files
for Swimming_pool_final robot</p>
  </description>
  <author>Kopanev Pavel</author>
  <maintainer email="kopanev-pavel-spb@yandex.ru" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>
  <export>
    <architecture_independent />
  </export>
</package>
